# receptor_db

./: README.md  curl_go.sh  curl_signals.sh  db_quick_setup.sh  go_term_filter.py  nuclear_receptor.json  surface_receptor.json
rs_receptor_db/: Cargo.toml  compose.yaml
rs_receptor_db/src/: main.rs
